# CT

./: CMakeLists.txt  glade.glade
arduino/: arduino.ino
cpp/: commands.cpp  deep-learning.cpp  main.cpp  myarea.cpp
hpp/: commands.hpp  deep-learning.hpp  main.hpp  myarea.hpp
